--- a/Resources/administration/src/module/sw-product/component/sw-product-visibility-select/sw-product-visibility-select.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-visibility-select/sw-product-visibility-select.html.twig
@@ -3,6 +3,6 @@
         {{ selection.salesChannelInternal.meta.viewData.name }}
     </span>
     <span v-else>
-        {{ selection.salesChannel.name }}
+        {{ selection.salesChannel.meta.viewData.name }}
     </span>
 {% endblock %}
