--- a/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-set-detail-base/sw-attribute-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-set-detail-base/sw-attribute-detail-base.html.twig
@@ -33,6 +33,7 @@
                 :associationStore="attributeSetRelationStore"
                 :store="entityNameStore"
                 itemValueKey="entityName"
+                displayName="entityName"
                 :label="$tc('sw-settings-attribute.set.detail.labelEntities')"
                 :placeholder="$tc('sw-settings-attribute.set.detail.placeholderEntities')"
                 id="entities"
