NEXT-2279 - Add shrinking limit when resizing columns, prevent accidental sort

--- a/Resources/administration/src/app/component/base/sw-button/sw-button.scss
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.scss
@@ -108,6 +108,10 @@ $sw-button-default-disabled-color:    $color-light-gray;
         &.sw-button--disabled {
             background: lighten($sw-button-primary-color-background, 20%);
         }
+
+        &.sw-button--square .sw-icon {
+            color: $sw-button-primary-color-text;
+        }
     }
 
     &.sw-button--contrast {
