--- a/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
+++ b/Resources/administration/src/app/component/data-grid/sw-data-grid/sw-data-grid.scss
@@ -75,6 +75,11 @@
                 text-decoration: underline;
             }
         }
+
+        .sw-icon,
+        .sw-color-badge {
+            flex-shrink: 0;
+        }
     }
 
     .sw-data-grid__cell-value {
