NTR - update naming and remove transition when 100% is reached

--- a/Resources/administration/src/app/component/utils/sw-progress-bar/sw-progress-bar.scss
+++ b/Resources/administration/src/app/component/utils/sw-progress-bar/sw-progress-bar.scss
@@ -20,9 +20,9 @@ $sw-progress-bar-height:            8px;
         height: 100%;
         background-color: $sw-progress-bar-value-color;
         border-radius: $sw-progress-bar-height / 2;
+    }
 
-        &.is--empty {
-            transition: 0s width linear;
-        }
+    .sw-progress-bar__value--no-transition {
+        transition: 0s width linear;
     }
 }
