NEXT-1709 - move isApi as prop / use template for conditions selects change / delete unused definitionStore on detail page

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -17,6 +17,7 @@
                                        v-if="!child.isDeleted"
                                        :condition="child"
                                        :level="level + 1"
+                                       :isApi="isApi"
                                        :parentDisabledDelete="disabledDeleteButton"
                                        @delete-condition="onDeleteCondition"
                                        @create-before="createPlaceholderBefore"
