--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -67,7 +67,7 @@
                     <sw-card :large="true" class="sw-product-stream-detail__condition_container" :title="$tc('sw-product-stream.detail.titleFilter')">
                         <sw-condition-tree v-if="productStream"
                                            :entity="productStream"
-                                           :conditionStore="getDefinitionStore()"
+                                           :conditionStore="conditionStore"
                                            :config="treeConfig"
                                            ref="conditionTree">
                         </sw-condition-tree>
