--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-tree.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-tree.html.twig
@@ -1,8 +1,9 @@
 {% block sw_condition_tree %}
     <div class="sw-condition-tree">
         <sw-condition-or-container v-if="nestedConditions"
-                         :condition="nestedConditions"
-                         :level="0">
+                                   :condition="nestedConditions"
+                                   :isApi="isApi"
+                                   :level="0">
         </sw-condition-or-container>
     </div>
 {% endblock %}
