--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.scss
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.scss
@@ -30,6 +30,7 @@
         .sw-context-button {
             .sw-button {
                 width: 100%;
+                height: 100%;
             }
         }
     }
