--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -52,7 +52,8 @@
 
                         {% block sw_settings_shipping_detail_content_tabs_advanced_prices %}
                             <sw-tabs-item :route="{ name: 'sw.settings.shipping.detail.advancedPrices', params: { id: $route.params.id } }"
-                                          :title="$tc('sw-settings-shipping.detail.tabAdvancedPrices')">
+                                          :title="$tc('sw-settings-shipping.detail.tabAdvancedPrices')"
+                                          class="sw-shipping-detail-page__price-settings">
                                 {{ $tc('sw-settings-shipping.detail.tabAdvancedPrices') }}
                             </sw-tabs-item>
                         {% endblock %}
