--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -17,7 +17,7 @@
                 {% endblock %}
 
                 {% block sw_settings_shipping_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="shippingMethod.isLoading" @click.prevent="onSave">
+                    <sw-button variant="primary" class="sw-settings-shipping-method-detail__save-action" :disabled="shippingMethod.isLoading" @click.prevent="onSave">
                         {{ $tc('sw-settings-shipping.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
@@ -36,7 +36,7 @@
             <sw-card-view slot="content">
 
                 {% block sw_settings_shipping_detail_content_tabs %}
-                    <sw-tabs class="sw-product-detail-page__tabs">
+                    <sw-tabs class="sw-shipping-detail-page__tabs">
                         {% block sw_settings_shipping_detail_content_tabs_general %}
                             <sw-tabs-item :route="{ name: 'sw.settings.shipping.detail.base', params: { id: $route.params.id } }"
                                           :title="$tc('sw-settings-shipping.detail.tabGeneral')">
