--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.scss
@@ -210,6 +210,7 @@ $sw-tree-item-color-text: $color-gutenberg;
         .tree-link {
             color: inherit;
             text-decoration: inherit;
+            display:block;
         }
     }
 
