NEXT-2136 - Add tags to category

--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -59,6 +59,10 @@
                         @sw-media-upload-remove-image="removeMediaItem">
                     </sw-media-upload>
                 {% endblock %}
+
+                {% block sw_category_view_information_tags %}
+                    <sw-tag-field :entity="category"></sw-tag-field>
+                {% endblock %}
             </sw-card>
         {% endblock %}
 
