--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.scss
@@ -22,6 +22,10 @@
         top: 122px;
     }
 
+    .sw-tag-field {
+        margin-top: 20px;
+    }
+
     @media screen and (min-width: 1580px) {
         .sw-card .sw-card__title {
             width: inherit;
