NTR - use store instead of entity property to get all condition changes

--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -82,7 +82,7 @@
 
                 <sw-product-stream-modal-preview
                         v-if="showModalPreview"
-                        :productFilter="productStream.filters[0]"
+                        :associationStore="filterAssociations"
                         ref="modalPreview"
                         @sw-product-stream-modal-preview-close="closeModalPreview">
                 </sw-product-stream-modal-preview>
